Fix alignment and column value

--- a/packages/cta-editor/src/editor.scss
+++ b/packages/cta-editor/src/editor.scss
@@ -29,8 +29,7 @@
 		gap: 20px;
 
 		.branding {
-			margin-right: 30px;
-			margin-left: 30px;
+			margin: 0 30px;
 
 			a {
 				display: flex;
